--- a/index.html
+++ b/index.html
@@ -1,37 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Modern Webpage</title>
+    <title>About Me - Cristian Villalobos</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
-        <h1>Welcome to My Modern Webpage</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <h1>Cristian Villalobos</h1>
+            <nav>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <section id="about">
-        <h2>About Me</h2>
-        <p>This is a brief introduction about myself.</p>
-    </section>
-    <section id="projects">
-        <h2>Projects</h2>
-        <p>Here are some of my projects.</p>
-    </section>
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>You can contact me at myemail@example.com.</p>
-    </section>
+    <main>
+        <section id="about">
+            <div class="container">
+                <h2>About Me</h2>
+                <p>I'm Cristian Villalobos, a passionate physicist specializing in bacterial suspension dynamics. I love
+                    exploring the complexities of active matter systems and their applications in various fields.</p>
+            </div>
+        </section>
+        <section id="skills">
+            <div class="container">
+                <h2>Skills</h2>
+                <ul>
+                    <li>LaTeX</li>
+                    <li>MATLAB</li>
+                    <li>Python</li>
+                    <li>Active Matter Physics</li>
+                </ul>
+            </div>
+        </section>
+        <section id="projects">
+            <div class="container">
+                <h2>Projects</h2>
+                <ul>
+                    <li>Flow Fluctuations in Bacterial Suspensions</li>
+                    <li>Recovering the Activity Parameters of an Active Fluid Confined in a Sphere</li>
+                    <li>Activity in Curved Bacterial Baths</li>
+                </ul>
+            </div>
+        </section>
+        <section id="contact">
+            <div class="container">
+                <h2>Contact</h2>
+                <p>Email: myemail@example.com</p>
+            </div>
+        </section>
+    </main>
     <footer>
-        <p>&copy; 2024 My Modern Webpage</p>
+        <div class="container">
+            <p>&copy; 2024 Cristian Villalobos</p>
+        </div>
     </footer>
     <script src="scripts.js"></script>
 </body>
+
 </html>
