--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
     <header>
         <div class="container">
             <h1>Cristian Villalobos</h1>
-            <nav>
+            <nav aria-label="Main navigation">
                 <ul>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#curriculum">Curriculum</a></li>
                     <li><a href="#publications">Publications</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
             <div class="toggle-container">
-                <button id="dark-mode-toggle">Toggle Dark Mode</button>
+                <button id="dark-mode-toggle" aria-label="Toggle dark mode">Toggle Dark Mode</button>
             </div>
         </div>
     </header>
     <section id="hero">
         <div class="container">
-            <img src="profile.jpg" alt="Profile Image" class="profile-img">
+            <img src="profile.jpg" alt="Profile Image of Cristian Villalobos" class="profile-img" loading="lazy">
             <h2>Cristian Villalobos</h2>
             <p>Physicist specializing in bacterial suspension dynamics</p>
         </div>
@@ -41,13 +41,12 @@
                     exploring the complexities of active matter systems and their applications in various fields.</p>
             </div>
         </section>
-        <section id="skills">
-            <div class="container grid">
-                <h2>Skills</h2>
-                <div class="skill"><i class="fas fa-code"></i> LaTeX</div>
-                <div class="skill"><i class="fas fa-cogs"></i> MATLAB</div>
-                <div class="skill"><i class="fas fa-python"></i> Python</div>
-                <div class="skill"><i class="fas fa-atom"></i> Active Matter Physics</div>
+        <section id="curriculum">
+            <div class="container">
+                <h2>Curriculum</h2>
+                <object data="Curriculum-ingles.pdf" type="application/pdf" width="100%" height="500px">
+                    <p>Your browser does not support PDFs. <a href="Curriculum-ingles.pdf">Download the PDF</a>.</p>
+                </object>
             </div>
         </section>
         <section id="publications">
@@ -64,9 +63,12 @@
         <section id="contact">
             <div class="container grid">
                 <h2>Contact</h2>
-                <div class="contact-item"><i class="fas fa-envelope"></i> myemail@example.com</div>
-                <div class="contact-item"><i class="fas fa-phone"></i> +123 456 7890</div>
-                <div class="contact-item"><i class="fas fa-map-marker-alt"></i> Santiago, Chile</div>
+                <div class="contact-item"><i class="fas fa-envelope" aria-hidden="true"></i> <span
+                        class="sr-only">Email:</span>myemail@example.com</div>
+                <div class="contact-item"><i class="fas fa-phone" aria-hidden="true"></i> <span
+                        class="sr-only">Phone:</span>+123 456 7890</div>
+                <div class="contact-item"><i class="fas fa-map-marker-alt" aria-hidden="true"></i> <span
+                        class="sr-only">Location:</span>Santiago, Chile</div>
             </div>
         </section>
     </main>
