Add curriculum section and remove skills section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav aria-label="Main navigation">
                 <ul>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#curriculum">Curriculum</a></li>
+                    <li><a href="curriculum.html">Curriculum</a></li>
                     <li><a href="#publications">Publications</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -39,14 +39,6 @@
                 <h2>About Me</h2>
                 <p>I'm Cristian Villalobos, a passionate physicist specializing in bacterial suspension dynamics. I love
                     exploring the complexities of active matter systems and their applications in various fields.</p>
-            </div>
-        </section>
-        <section id="curriculum">
-            <div class="container">
-                <h2>Curriculum</h2>
-                <object data="Curriculum-ingles.pdf" type="application/pdf" width="100%" height="500px">
-                    <p>Your browser does not support PDFs. <a href="Curriculum-ingles.pdf">Download the PDF</a>.</p>
-                </object>
             </div>
         </section>
         <section id="publications">
