Add curriculum section and remove skills section

--- a/curriculum.html
+++ b/curriculum.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cristian Villalobos - Physicist</title>
+    <title>Curriculum - Cristian Villalobos</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
@@ -13,123 +13,100 @@
     <header>
         <div class="container">
             <h1>Cristian Villalobos</h1>
-            <nav>
+            <nav aria-label="Main navigation">
                 <ul>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#publications">Publications</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="curriculum.html">Curriculum</a></li>
+                    <li><a href="index.html#publications">Publications</a></li>
+                    <li><a href="index.html#contact">Contact</a></li>
                 </ul>
             </nav>
             <div class="toggle-container">
-                <button id="dark-mode-toggle">Toggle Dark Mode</button>
-                <button id="language-toggle">ES</button>
+                <button id="dark-mode-toggle" aria-label="Toggle dark mode">Toggle Dark Mode</button>
             </div>
         </div>
     </header>
-    <section id="hero">
-        <div class="container">
-            <img src="profile.jpg" alt="Profile Image" class="profile-img">
-            <h2>Cristian Villalobos</h2>
-            <p>Physicist specializing in bacterial suspension dynamics</p>
-            <div id="typing-effect"></div>
-        </div>
-    </section>
     <main>
-        <section id="about">
+        <section id="curriculum">
             <div class="container">
-                <h2>About Me</h2>
-                <p>I'm Cristian Villalobos, a passionate physicist specializing in bacterial suspension dynamics. I love
-                    exploring the complexities of active matter systems and their applications in various fields.</p>
-            </div>
-        </section>
-        <section id="skills">
-            <div class="container">
-                <h2>Skills</h2>
-                <div class="grid">
-                    <div class="skill">
-                        <div class="skill-bar">
-                            <div class="skill-level" data-skill="90"></div>
-                        </div>
-                        <span>LaTeX</span>
-                    </div>
-                    <div class="skill">
-                        <div class="skill-bar">
-                            <div class="skill-level" data-skill="85"></div>
-                        </div>
-                        <span>MATLAB</span>
-                    </div>
-                    <div class="skill">
-                        <div class="skill-bar">
-                            <div class="skill-level" data-skill="80"></div>
-                        </div>
-                        <span>Python</span>
-                    </div>
-                    <div class="skill">
-                        <div class="skill-bar">
-                            <div class="skill-level" data-skill="95"></div>
-                        </div>
-                        <span>Active Matter Physics</span>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section id="projects">
-            <div class="container">
-                <h2>Projects</h2>
-                <div class="project-grid">
-                    <div class="card">
-                        <img src="project1.jpg" alt="Project 1">
-                        <div class="card-content">
-                            <h3>Flow Fluctuations in Bacterial Suspensions</h3>
-                            <p>Investigating the dynamic behavior of particles in bacterial suspensions.</p>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="project2.jpg" alt="Project 2">
-                        <div class="card-content">
-                            <h3>Recovering Activity Parameters</h3>
-                            <p>Analyzing the activity of confined bacterial fluids.</p>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="project3.jpg" alt="Project 3">
-                        <div class="card-content">
-                            <h3>Activity in Curved Bacterial Baths</h3>
-                            <p>Exploring the dynamics of bacterial baths in curved geometries.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section id="publications">
-            <div class="container">
-                <h2>Publications</h2>
-                <ul>
-                    <li><a href="https://link.springer.com/article/10.1007/s10035-022-01221-x" target="_blank">"Flow
-                            Fluctuations in Bacterial Suspensions" - Granular Matter (2022)</a></li>
-                    <li><a href="https://arxiv.org/pdf/2403.11933" target="_blank">"Recovering the Activity Parameters
-                            of an Active Fluid Confined in a Sphere" - under review</a></li>
-                </ul>
-            </div>
-        </section>
-        <section id="contact">
-            <div class="container">
-                <h2>Contact</h2>
-                <div class="grid">
-                    <div class="contact-item">
-                        <i class="fas fa-envelope"></i>
-                        <span>myemail@example.com</span>
-                    </div>
-                    <div class="contact-item">
-                        <i class="fas fa-phone"></i>
-                        <span>+123 456 7890</span>
-                    </div>
-                    <div class="contact-item">
-                        <i class="fas fa-map-marker-alt"></i>
-                        <span>Santiago, Chile</span>
-                    </div>
+                <h2>Curriculum</h2>
+                <div class="curriculum-content">
+                    <h3>Personal Details</h3>
+                    <p><strong>Birth:</strong> November 02, 1994</p>
+                    <p><strong>Address:</strong> Av. Viel 1616. Dpto 1804. Santiago, Chile</p>
+                    <p><strong>Phone:</strong> (+569) 88274915</p>
+                    <p><strong>Email:</strong> cristian.villalobos@ug.uchile.cl</p>
+                    <p><strong>Nationality:</strong> Chilean</p>
+
+                    <h3>Education</h3>
+                    <p><strong>B.S Physics (2013-2017):</strong> Pontificia Universidad Católica de Valparaíso.</p>
+                    <p><strong>M.S in Sciences, mention in Physics (2018-2019):</strong> Pontificia Universidad Católica
+                        de Valparaíso.</p>
+                    <p><strong>PhD Candidate- PhD in Sciences, mention in Physics (2019-date):</strong> Universidad de
+                        Chile.</p>
+
+                    <h3>Skills</h3>
+                    <p><strong>Languages:</strong> Spanish (native) - English (intermediate)</p>
+                    <p><strong>Programming:</strong> MATLAB, Python</p>
+
+                    <h3>Teaching</h3>
+                    <ul>
+                        <li>2016 - Teachers assistant of Experimental Electromagnetism (PUCV).</li>
+                        <li>2017 - Teachers assistant of Experimental Electromagnetism (PUCV).</li>
+                        <li>2017 - Teachers assistant of Theoretical Physics for Pedagogy in physics (PUCV).</li>
+                        <li>2018 - Teachers assistant of Experimental Electromagnetism (PUCV).</li>
+                        <li>2018 - Teachers assistant of Experimental Optics and Waves (PUCV).</li>
+                        <li>2018 - Teachers assistant of Electrodynamics (PUCV).</li>
+                        <li>2019 - Teachers assistant of Introduction to Classical Physics (UCH).</li>
+                        <li>2020 - Teachers assistant of Introduction to Classical Physics (UCH).</li>
+                        <li>2022 - Teachers assistant of Introduction to Classical Physics (UCH).</li>
+                        <li>2022 - Teachers assistant of Fluid Mechanics (UCH).</li>
+                        <li>2023 - Teachers assistant of Continuum Mechanics (UCH).</li>
+                        <li>2024 - Teachers assistant of Fluid Mechanics (UCH).</li>
+                    </ul>
+
+                    <h3>Conferences</h3>
+                    <ul>
+                        <li>2014 - II Congreso Nacional de Estudiantes de Ciencias Físicas y Astronómicas.</li>
+                        <li>2015 - Southern Workshop on Granular Materials 2015.</li>
+                        <li>2017 - XV Latin American Workshop on Nonlinear Phenomena (LAWNP 2017).</li>
+                        <li>2017 - XVI International Workshop on Instabilities and Nonequilibrium Structures.</li>
+                        <li>2018 - Southern Workshop on Granular Materials 2018.</li>
+                        <li>2020 - Complex Fluid Seminar Series.</li>
+                        <li>2021 - The Physics of Living Matter.</li>
+                        <li>2022 - Oral presentation on APS March Meeting.</li>
+                        <li>2022 - WE-Heraeus Summer School on Active Matter and Complex Media at the Institut d’Etudes
+                            Scientifiques de Cargèse, Corsica, France.</li>
+                    </ul>
+
+                    <h3>Research</h3>
+                    <p><strong>Master Thesis (2018-2019):</strong> Crater Formation on Levitating Sands.</p>
+                    <p><strong>PhD Thesis (2019-date):</strong> Bacterial Fluctuation in Confined Spaces.</p>
+                    <p><strong>Internship:</strong></p>
+                    <ul>
+                        <li>2019 - Bacterial Shells at École Supérieure de Physique et de Chimie Industrielle.</li>
+                        <li>2021 - Active Emulsion at École Supérieure de Physique et de Chimie Industrielle.</li>
+                    </ul>
+
+                    <h3>Articles</h3>
+                    <ul>
+                        <li>2022 - Villalobos, C., Housset, M., & Varas, G. (2022). Geometrical description of impact
+                            cratering under microgravity conditions. Granular Matter, 24(2), 64.</li>
+                        <li>2024 - Villalobos, C., Soto, R., & Cordero, M.L. (2024). Passive particle confined to a
+                            sphere subject to an active noise (submitted).</li>
+                        <li>2024 - Villalobos, C., Soto, R., Cordero, M. L., Liu, Z., León, T. L., Linder, A., &
+                            Clément, E. (2024). Activity in confined bacterial baths (to be submitted).</li>
+                    </ul>
+
+                    <h3>Scholarships and Awards</h3>
+                    <ul>
+                        <li>2018 - Second Place “Un Click al Conocimiento” (PUCV).</li>
+                        <li>2018 - Beca término de tesis (PUCV).</li>
+                        <li>2020-2024 - Beca ANID Doctorado Nacional.</li>
+                        <li>2021 - Program Scholarship Chile-France, from French Institute in Chile. Three months at
+                            PMMH laboratory at ESPCI, Paris, France, Sorbonne University.</li>
+                        <li>2022 - Cover of Granular Matter. Volume 24, Issue 2.</li>
+                    </ul>
                 </div>
             </div>
         </section>
@@ -139,8 +116,7 @@
             <p>&copy; 2024 Cristian Villalobos</p>
         </div>
     </footer>
-
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
 </body>
 
 </html>
