--- a/curriculum.html
+++ b/curriculum.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curriculum - Cristian Villalobos</title>
+    <title>Curriculum Vitae - Cristian Villalobos</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
@@ -22,100 +22,133 @@
                 </ul>
             </nav>
             <div class="toggle-container">
-                <button id="dark-mode-toggle" aria-label="Toggle dark mode">Toggle Dark Mode</button>
+                <button id="dark-mode-toggle" aria-label="Toggle dark mode">
+                    <i class="fas fa-moon"></i>
+                </button>
             </div>
         </div>
     </header>
+
     <main>
         <section id="curriculum">
             <div class="container">
-                <h2>Curriculum</h2>
-                <div class="curriculum-content">
+                <h2>Curriculum Vitae</h2>
+
+                <div class="curriculum-section">
                     <h3>Personal Details</h3>
-                    <p><strong>Birth:</strong> November 02, 1994</p>
-                    <p><strong>Address:</strong> Av. Viel 1616. Dpto 1804. Santiago, Chile</p>
-                    <p><strong>Phone:</strong> (+569) 88274915</p>
-                    <p><strong>Email:</strong> cristian.villalobos@ug.uchile.cl</p>
-                    <p><strong>Nationality:</strong> Chilean</p>
+                    <div class="curriculum-item">
+                        <p><strong>Date of Birth:</strong> November 02, 1994</p>
+                        <p><strong>Address:</strong> Av. Viel 1616. Dpto 1804. Santiago, Chile</p>
+                        <p><strong>Phone:</strong> (+569) 88274915</p>
+                        <p><strong>Email:</strong> cristian.villalobos@ug.uchile.cl</p>
+                        <p><strong>Nationality:</strong> Chilean</p>
+                    </div>
+                </div>
 
+                <div class="curriculum-section">
                     <h3>Education</h3>
-                    <p><strong>B.S Physics (2013-2017):</strong> Pontificia Universidad Católica de Valparaíso.</p>
-                    <p><strong>M.S in Sciences, mention in Physics (2018-2019):</strong> Pontificia Universidad Católica
-                        de Valparaíso.</p>
-                    <p><strong>PhD Candidate- PhD in Sciences, mention in Physics (2019-date):</strong> Universidad de
-                        Chile.</p>
+                    <div class="curriculum-item">
+                        <h4>PhD Candidate - Sciences, mention in Physics</h4>
+                        <p>Universidad de Chile, 2019 - Present</p>
+                    </div>
+                    <div class="curriculum-item">
+                        <h4>M.S. in Sciences, mention in Physics</h4>
+                        <p>Pontificia Universidad Católica de Valparaíso, 2018 - 2019</p>
+                    </div>
+                    <div class="curriculum-item">
+                        <h4>B.S. Physics</h4>
+                        <p>Pontificia Universidad Católica de Valparaíso, 2013 - 2017</p>
+                    </div>
+                </div>
 
+                <div class="curriculum-section">
                     <h3>Skills</h3>
-                    <p><strong>Languages:</strong> Spanish (native) - English (intermediate)</p>
-                    <p><strong>Programming:</strong> MATLAB, Python</p>
+                    <div class="curriculum-item">
+                        <h4>Languages</h4>
+                        <div class="skills-list">
+                            <span class="skill-tag">Spanish (native)</span>
+                            <span class="skill-tag">English (intermediate)</span>
+                        </div>
+                    </div>
+                    <div class="curriculum-item">
+                        <h4>Programming</h4>
+                        <div class="skills-list">
+                            <span class="skill-tag">MATLAB</span>
+                            <span class="skill-tag">Python</span>
+                        </div>
+                    </div>
+                </div>
 
-                    <h3>Teaching</h3>
-                    <ul>
-                        <li>2016 - Teachers assistant of Experimental Electromagnetism (PUCV).</li>
-                        <li>2017 - Teachers assistant of Experimental Electromagnetism (PUCV).</li>
-                        <li>2017 - Teachers assistant of Theoretical Physics for Pedagogy in physics (PUCV).</li>
-                        <li>2018 - Teachers assistant of Experimental Electromagnetism (PUCV).</li>
-                        <li>2018 - Teachers assistant of Experimental Optics and Waves (PUCV).</li>
-                        <li>2018 - Teachers assistant of Electrodynamics (PUCV).</li>
-                        <li>2019 - Teachers assistant of Introduction to Classical Physics (UCH).</li>
-                        <li>2020 - Teachers assistant of Introduction to Classical Physics (UCH).</li>
-                        <li>2022 - Teachers assistant of Introduction to Classical Physics (UCH).</li>
-                        <li>2022 - Teachers assistant of Fluid Mechanics (UCH).</li>
-                        <li>2023 - Teachers assistant of Continuum Mechanics (UCH).</li>
-                        <li>2024 - Teachers assistant of Fluid Mechanics (UCH).</li>
-                    </ul>
+                <div class="curriculum-section">
+                    <h3>Teaching Experience</h3>
+                    <div class="curriculum-item">
+                        <h4>Universidad de Chile</h4>
+                        <ul>
+                            <li>2024 - Teachers assistant of Fluid Mechanics</li>
+                            <li>2023 - Teachers assistant of Continuum Mechanics</li>
+                            <li>2022 - Teachers assistant of Fluid Mechanics</li>
+                            <li>2022 - Teachers assistant of Introduction to Classical Physics</li>
+                            <li>2020 - Teachers assistant of Introduction to Classical Physics</li>
+                            <li>2019 - Teachers assistant of Introduction to Classical Physics</li>
+                        </ul>
+                    </div>
+                    <div class="curriculum-item">
+                        <h4>Pontificia Universidad Católica de Valparaíso</h4>
+                        <ul>
+                            <li>2018 - Teachers assistant of Electrodynamics</li>
+                            <li>2018 - Teachers assistant of Experimental Optics and Waves</li>
+                            <li>2018 - Teachers assistant of Experimental Electromagnetism</li>
+                            <li>2017 - Teachers assistant of Theoretical Physics for Pedagogy in physics</li>
+                            <li>2017 - Teachers assistant of Experimental Electromagnetism</li>
+                            <li>2016 - Teachers assistant of Experimental Electromagnetism</li>
+                        </ul>
+                    </div>
+                </div>
 
+                <div class="curriculum-section">
                     <h3>Conferences</h3>
                     <ul>
-                        <li>2014 - II Congreso Nacional de Estudiantes de Ciencias Físicas y Astronómicas.</li>
-                        <li>2015 - Southern Workshop on Granular Materials 2015.</li>
-                        <li>2017 - XV Latin American Workshop on Nonlinear Phenomena (LAWNP 2017).</li>
-                        <li>2017 - XVI International Workshop on Instabilities and Nonequilibrium Structures.</li>
-                        <li>2018 - Southern Workshop on Granular Materials 2018.</li>
-                        <li>2020 - Complex Fluid Seminar Series.</li>
-                        <li>2021 - The Physics of Living Matter.</li>
-                        <li>2022 - Oral presentation on APS March Meeting.</li>
-                        <li>2022 - WE-Heraeus Summer School on Active Matter and Complex Media at the Institut d’Etudes
-                            Scientifiques de Cargèse, Corsica, France.</li>
+                        <li>2022 - WE-Heraeus Summer School on Active Matter and Complex Media at the Institut d'Etudes
+                            Scientifiques de Cargèse, Corsica, France</li>
+                        <li>2022 - Oral presentation on APS March Meeting</li>
+                        <li>2021 - The Physics of Living Matter</li>
+                        <li>2020 - Complex Fluid Seminar Series</li>
+                        <li>2018 - Southern Workshop on Granular Materials 2018</li>
+                        <li>2017 - XVI International Workshop on Instabilities and Nonequilibrium Structures</li>
+                        <li>2017 - XV Latin American Workshop on Nonlinear Phenomena (LAWNP 2017)</li>
+                        <li>2015 - Southern Workshop on Granular Materials 2015</li>
+                        <li>2014 - II Congreso Nacional de Estudiantes de Ciencias Físicas y Astronómicas</li>
                     </ul>
+                </div>
 
+                <div class="curriculum-section">
                     <h3>Research</h3>
-                    <p><strong>Master Thesis (2018-2019):</strong> Crater Formation on Levitating Sands.</p>
-                    <p><strong>PhD Thesis (2019-date):</strong> Bacterial Fluctuation in Confined Spaces.</p>
-                    <p><strong>Internship:</strong></p>
-                    <ul>
-                        <li>2019 - Bacterial Shells at École Supérieure de Physique et de Chimie Industrielle.</li>
-                        <li>2021 - Active Emulsion at École Supérieure de Physique et de Chimie Industrielle.</li>
-                    </ul>
-
-                    <h3>Articles</h3>
-                    <ul>
-                        <li>2022 - Villalobos, C., Housset, M., & Varas, G. (2022). Geometrical description of impact
-                            cratering under microgravity conditions. Granular Matter, 24(2), 64.</li>
-                        <li>2024 - Villalobos, C., Soto, R., & Cordero, M.L. (2024). Passive particle confined to a
-                            sphere subject to an active noise (submitted).</li>
-                        <li>2024 - Villalobos, C., Soto, R., Cordero, M. L., Liu, Z., León, T. L., Linder, A., &
-                            Clément, E. (2024). Activity in confined bacterial baths (to be submitted).</li>
-                    </ul>
-
-                    <h3>Scholarships and Awards</h3>
-                    <ul>
-                        <li>2018 - Second Place “Un Click al Conocimiento” (PUCV).</li>
-                        <li>2018 - Beca término de tesis (PUCV).</li>
-                        <li>2020-2024 - Beca ANID Doctorado Nacional.</li>
-                        <li>2021 - Program Scholarship Chile-France, from French Institute in Chile. Three months at
-                            PMMH laboratory at ESPCI, Paris, France, Sorbonne University.</li>
-                        <li>2022 - Cover of Granular Matter. Volume 24, Issue 2.</li>
-                    </ul>
+                    <div class="curriculum-item">
+                        <h4>PhD Thesis (2019-date)</h4>
+                        <p>Bacterial Fluctuation in Confined Spaces</p>
+                    </div>
+                    <div class="curriculum-item">
+                        <h4>Master Thesis (2018-2019)</h4>
+                        <p>Crater Formation on Levitating Sands</p>
+                    </div>
+                    <div class="curriculum-item">
+                        <h4>Internships</h4>
+                        <ul>
+                            <li>2021 - Active Emulsion at École Supérieure de Physique et de Chimie Industrielle</li>
+                            <li>2019 - Bacterial Shells at École Supérieure de Physique et de Chimie Industrielle</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
     </main>
+
     <footer>
         <div class="container">
-            <p>&copy; 2024 Cristian Villalobos</p>
+            <p>&copy; <span id="current-year"></span> Cristian Villalobos</p>
         </div>
     </footer>
+
     <script src="scripts.js"></script>
 </body>
 
