Add curriculum section and remove skills section

--- a/curriculum.html
+++ b/curriculum.html
@@ -84,23 +84,23 @@
                     <div class="curriculum-item">
                         <h4>Universidad de Chile</h4>
                         <ul>
-                            <li>2024 - Teachers assistant of Fluid Mechanics</li>
-                            <li>2023 - Teachers assistant of Continuum Mechanics</li>
-                            <li>2022 - Teachers assistant of Fluid Mechanics</li>
-                            <li>2022 - Teachers assistant of Introduction to Classical Physics</li>
-                            <li>2020 - Teachers assistant of Introduction to Classical Physics</li>
-                            <li>2019 - Teachers assistant of Introduction to Classical Physics</li>
+                            <li>2024 - Teacher's assistant of Fluid Mechanics</li>
+                            <li>2023 - Teacher's assistant of Continuum Mechanics</li>
+                            <li>2022 - Teacher's assistant of Fluid Mechanics</li>
+                            <li>2022 - Teacher's assistant of Introduction to Classical Physics</li>
+                            <li>2020 - Teacher's assistant of Introduction to Classical Physics</li>
+                            <li>2019 - Teacher's assistant of Introduction to Classical Physics</li>
                         </ul>
                     </div>
                     <div class="curriculum-item">
                         <h4>Pontificia Universidad Católica de Valparaíso</h4>
                         <ul>
-                            <li>2018 - Teachers assistant of Electrodynamics</li>
-                            <li>2018 - Teachers assistant of Experimental Optics and Waves</li>
-                            <li>2018 - Teachers assistant of Experimental Electromagnetism</li>
-                            <li>2017 - Teachers assistant of Theoretical Physics for Pedagogy in physics</li>
-                            <li>2017 - Teachers assistant of Experimental Electromagnetism</li>
-                            <li>2016 - Teachers assistant of Experimental Electromagnetism</li>
+                            <li>2018 - Teacher's assistant of Electrodynamics</li>
+                            <li>2018 - Teacher's assistant of Experimental Optics and Waves</li>
+                            <li>2018 - Teacher's assistant of Experimental Electromagnetism</li>
+                            <li>2017 - Teacher's assistant of Theoretical Physics for Pedagogy in physics</li>
+                            <li>2017 - Teacher's assistant of Experimental Electromagnetism</li>
+                            <li>2016 - Teacher's assistant of Experimental Electromagnetism</li>
                         </ul>
                     </div>
                 </div>
@@ -146,6 +146,15 @@
     <footer>
         <div class="container">
             <p>&copy; <span id="current-year"></span> Cristian Villalobos</p>
+            <nav aria-label="Footer navigation">
+                <ul>
+                    <li><a href="#">Terms</a></li>
+                    <li><a href="#">Privacy</a></li>
+                    <li><a href="#">Security</a></li>
+                    <li><a href="#">Docs</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
         </div>
     </footer>
 
