--- a/index.html
+++ b/index.html
@@ -93,6 +93,15 @@
     <footer>
         <div class="container">
             <p>&copy; <span id="current-year"></span> Cristian Villalobos</p>
+            <nav aria-label="Footer navigation">
+                <ul>
+                    <li><a href="#">Terms</a></li>
+                    <li><a href="#">Privacy</a></li>
+                    <li><a href="#">Security</a></li>
+                    <li><a href="#">Docs</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
         </div>
     </footer>
 
